[package]
name = "rift-breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", ref = "main" }
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level=3

